[package]
name = "http-caching"
description = "Http request caching library"
version = "0.1.0"
rust-version = "1.75"
categories   = ["http", "http-request"]
keywords     = ["http", "request", "cache", "caching"]
readme       = false

authors.workspace = true
edition.workspace = true

[dependencies]
url = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
chrono = { workspace = true, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
serde = [ "dep:serde", "url/serde", "chrono?/serde" ]
chrono = [ "dep:chrono" ]

[package.metadata.docs.rs]
features = ["serde", "chrono"]
